--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/Matheus.jpg" alt="avatar do Matheus" srcset="">
+        <img src="img/Matheus.jpg" alt="avatar do Matheus" srcset="" width="150" height="150">
         <p>Eu sou Matheus</p>
         <h1>sou um estudante do curso técnico de desenvolvimento de sistemas</h1>
         <p>Estudo no Colégio Estadual Gabriel de Lara em Matinhos, ando cursando desenvolvimento de sistemas, estou aprendendo Programação Front-End, Mobile, Banco de dados, Ciências da computação e Análise de Sistemas. Estou atualmente no 2º ano do Ensino Médio, Procuro futuramente Trabalhar na área</p>
