--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
@@ -13,26 +14,41 @@
     <header class="container text-center">
         <img src="img/Matheus.jpg" alt="avatar do Matheus" srcset="" width="150" height="150" class="rounded-circle">
         <p class="lead">Eu sou Matheus</p>
-        <h1>sou um estudante do curso técnico de desenvolvimento de sistemas</h1>
-        <p>Estudo no Colégio Estadual Gabriel de Lara em Matinhos, ando cursando desenvolvimento de sistemas, estou aprendendo Programação Front-End, Mobile, Banco de dados, Ciências da computação e Análise de Sistemas. Estou atualmente no 2º ano do Ensino Médio, Procuro futuramente Trabalhar na área</p>
+        <h1>Sou um estudante do curso técnico de desenvolvimento de sistemas</h1>
+        <p>Estudo no Colégio Estadual Gabriel de Lara em Matinhos, ando cursando desenvolvimento de sistemas, estou
+            aprendendo Programação Front-End, Mobile, Banco de dados, Ciências da computação e Análise de Sistemas.
+            Estou atualmente no 2º ano do Ensino Médio, Procuro futuramente Trabalhar na área</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secundary">Página web: HTML e CSS</p>
-            <p class="badge bg-secundary">HTML5 e CSS3: listas e navegação</p>
-            <p class="badge bg-secundary">HTML e CSS: formulários e tabelas</p>
+            <p class="badge bg-primary">Página web: HTML e CSS</p>
+            <p class="badge bg-primary">HTML5 e CSS3: listas e navegação</p>
+            <p class="badge bg-primary">HTML e CSS: formulários e tabelas</p>
         </div>
     </header>
 
-    <section class="container">
+    <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
-            <div class="card">
-                
+            <div class="col-md4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/BarbeariaAlura.png" alt="Foto da página inicial da Barbearia Alura">
+                    <div class="card-body">
+                        <h5 class="card title">Desenvolvendo uma página em HTML e CSS - BARBEARIA ALURA</h5>
+                        <p class="card-text">
+                            Página criada para desenvolver habilidades em programação Front-end, utilizando HTML e CSS.
+                            Foi criado um website com o tema Barbearia ALura, onde temos um menu que acessa a página de
+                            produtos e contato.
+                        </p>
+                        <a href="https://mat2777.github.io/Barbearia-Alura/"class="btn btn-primary">Acesse a página</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
