--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="container text-center">
+    <header class="container text-center" id="body">
         <img src="img/Matheus.jpg" alt="avatar do Matheus" srcset="" width="150" height="150" class="rounded-circle">
         <p class="lead">Eu sou Matheus</p>
         <h1>Sou um estudante do curso técnico de desenvolvimento de sistemas</h1>
@@ -20,9 +20,27 @@
             Estou atualmente no 2º ano do Ensino Médio, Procuro futuramente Trabalhar na área</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-primary">Página web: HTML e CSS</p>
-            <p class="badge bg-primary">HTML5 e CSS3: listas e navegação</p>
-            <p class="badge bg-primary">HTML e CSS: formulários e tabelas</p>
+            <a class="habilidades" href="doc/HTML-CSS_Parte1.pdf" target="_blank">
+                <p class="badge bg-secondary">Página web: HTML e CSS</p>
+            </a>
+            <a class="habilidades" href="doc/HTML-CSS_Parte2.pdf" target="_blank">
+                <p class="badge bg-secondary">HTML5 e CSS3: listas e navegação</p>
+            </a>
+            <a class="habilidades" href="doc/HTML-CSS_Parte3.pdf" target="_blank">
+                <p class="badge bg-secondary">HTML e CSS: formulários e tabelas</p>
+            </a>
+            <a class="habilidades" href="doc/HTML-CSS_Parte4.pdf" target="_blank">
+                <p class="badge bg-secondary">HTML e CSS: avançando no CSS</p>
+            </a>
+        </div>
+
+        <div>
+            <a class="habilidades" href="doc/Certificado - Alura - Cursos UX.pdf" target="_blank">
+                <p class="badge bg-secondary">UX: conceitos iniciais</p>
+            </a>
+            <a class="habilidades" href="doc/Certificado - Alura - Cursos UX Strategy.pdf" target="_blank">
+                <p class="badge bg-secondary">UX Strategy: divergindo ideias</p>
+            </a>
         </div>
     </header>
 
@@ -43,12 +61,30 @@
                     </div>
                 </div>
             </div>
+        
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/Caivo.png" alt="Foto da página inicial da Caivo">
+                    <div class="card-body">
+                        <h5 class="card-title">Replicando uma pagina em HTML e CSS - CAIVO carros</h5>
+                        <p class="card-text">
+                            Página criada para desenvolver habilidades em programação Front-End, utilizando HTML e CSS. Foi criado um website com o tema de uma concessionária online de carros, onde temos um menu que acessa a página de produtos e contato.
+                        </p>
+                        <a href="https://github.com/mat2777/Vendedor-de-carros" class="btn btn-primary">Acesse a página</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <footer class="container py-5" id="rodape">
+        <h2>Entre em contato</h2>
+        <div>
+            <a id="ancora" href="https://github.com/mat2777">GitHub</a>
+        </div>
+        <p class="my-5 text-center"> &copy; Copyright 2025. Produzido por MATHEUS MELO DE ARAUJO</p>
+    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 
