--- a/teste.html
+++ b/teste.html
@@ -6,13 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <h1>Teste de GIT e GITHUB</h1>
 
     <p>Como fazer comit e enviar ao github?</p>
 
     <p>para listar as configurações do GIT: git config --global --list</p>
     <p>para clonar reositório: git clone 'link do repositorio'</p>
+    <p>2. se não for seu usuario de email: configurar usando git config --global user.name "SeuNome" configurar git config --global user.email "seu.email@escola.pr.gov.br"</p>
+    <p>3. não esquececr que na 1ª vez irá pedir autorização do github.</p>
+    <p>4. Salvar o arquivo que está escrevendo.</p>
+    <p>5. Comando para criar o arquivo: git add nomeDoArquivo</p>
+    <p>6. COmando para gravar COMMIT: git commit nomeDoArquivo -m "sua mensagem"</p>
+    <p>7.Comando para enviar ao repositório GitHub: git push origin main</p>
     
 </body>
 </html>
