--- a/teste.html
+++ b/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste</title>
 </head>
 <body>
 
@@ -11,14 +11,14 @@
 
     <p>Como fazer comit e enviar ao github?</p>
 
-    <p>para listar as configurações do GIT: git config --global --list</p>
-    <p>para clonar reositório: git clone 'link do repositorio'</p>
-    <p>2. se não for seu usuario de email: configurar usando git config --global user.name "SeuNome" configurar git config --global user.email "seu.email@escola.pr.gov.br"</p>
+    <p>0. para clonar reositório: git clone 'link do repositorio'.</p>
+    <p>1. para listar as configurações do GIT: git config --global --list.</p>
+    <p>2. se não for seu usuario de email: configurar usando git config --global user.name "SeuNome" configurar git config --global user.email "seu.email@escola.pr.gov.br".</p>
     <p>3. não esquececr que na 1ª vez irá pedir autorização do github.</p>
     <p>4. Salvar o arquivo que está escrevendo.</p>
-    <p>5. Comando para criar o arquivo: git add nomeDoArquivo</p>
-    <p>6. COmando para gravar COMMIT: git commit nomeDoArquivo -m "sua mensagem"</p>
-    <p>7.Comando para enviar ao repositório GitHub: git push origin main</p>
+    <p>5. Comando para criar o arquivo: git add nomeDoArquivo.</p>
+    <p>6. COmando para gravar COMMIT: git commit nomeDoArquivo -m "sua mensagem".</p>
+    <p>7. Comando para enviar ao repositório GitHub: git push origin main.</p>
     
 </body>
 </html>
