--- a/teste.html
+++ b/teste.html
@@ -20,6 +20,13 @@
     <p>6. COmando para gravar COMMIT: git commit nomeDoArquivo -m "sua mensagem"</p>
     <p>7. Comando para enviar ao repositório GitHub: git push origin main</p>
     <p>8. Para limpar as credenciais: cmdkey /delete git:https://github.com</p>
+    <ul>
+        <li>git log</li>
+        <li>git log --oneline</li>
+        <li>git log -p</li>
+        <li>git log --author="user_name"</li>
+        <li>git log --since=1.month.out</li>
+    </ul>
     
 </body>
 </html>
