--- a/git.html
+++ b/git.html
@@ -27,6 +27,8 @@
         <li>git log --author="user_name"</li>
         <li>git log --since=1.month.out</li>
     </ul>
+
+    <p>9. Comando para restaurar arquivo pelo HASH (cód de 7 digitos): git restore --source=<HASH> <caminho do arquivo> EXEMPLO git restore --source=c7b8a90 deletendo.html</p>
     
 </body>
 </html>
