--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a class="habilidades" href="doc/HTML-CSS_Parte4.pdf" target="_blank">
                 <p class="badge bg-secondary">HTML e CSS: avançando no CSS</p>
             </a>
+            <a class="habilidades" href="doc/Certificado - JavaScript.pdf" target="_blank">
+                <p class="badge bg-secondary">JavaScript: programando na linguagem da web</p>
+            </a>
         </div>
 
         <div>
@@ -39,6 +42,9 @@
             </a>
             <a class="habilidades" href="doc/Certificado - Alura - Cursos UX Strategy.pdf" target="_blank">
                 <p class="badge bg-secondary">UX Strategy: divergindo ideias</p>
+            </a>
+            <a class="habilidades" href="doc/Certificado - ReactNative.pdf" target="_blank">
+                <p class="badge bg-secondary">Reactive Native: criando um app</p>
             </a>
         </div>
     </header>
